--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dev": "next dev --turbopack -p 3038",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type-check": "tsc --noEmit -p ./tsconfig.json"
   },
   "dependencies": {
     "next": "15.2.3",
@@ -34,6 +35,7 @@
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "lefthook": "^1.11.3",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4",
